# gtest-cpp-demo

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Mock/: CMakeLists.txt  painter.h  turtle.h
src/Sample/: CMakeLists.txt  sample1.cc
src/Turtle/: CMakeLists.txt
tests/: CMakeLists.txt
tests/gmock/: CMakeLists.txt  mock_turtle.h  mock_turtle_test.cc
tests/gtest/: .test-lldb-sample1  CMakeLists.txt  sample3_unittest_fixture.cc
